# Data

./: .gitignore  .gitmodules  ILinks.cs  ILinksExtensions.cs  ISynchronizedLinks.cs  LinkAddress.cs  LinksConstants.cs  LinksConstantsExtensions.cs  Platform.Data.csproj  Platform.Data.sln  Point.cs  README.html  README.md  docfx.json  index.html  index.json  manifest.json  publish-docs.sh  toc.html  toc.yml  xrefmap.yml
Constants/: ILinksAddressConstants.cs  ILinksCombinedConstants.cs  ILinksDecisionConstants.cs  ILinksPartConstants.cs  LinksCombinedConstants[TDecision, TAddress, TPartIndex].cs  LinksCombinedConstants[TDecision, TAddress].cs  LinksDecisionConstants.cs
Exceptions/: ArgumentLinkDoesNotExistsException.cs  ArgumentLinkHasDependenciesException.cs  LinkWithSameValueAlreadyExistsException.cs  LinksLimitReachedException.cs
Platform.Data/: Hybrid.cs  ILinks.cs  ILinksExtensions.cs  LinkAddress.cs  LinksConstants.cs  LinksConstantsExtensions.cs  Platform.Data.csproj  Point.cs
Platform.Data.Tests/: LinksConstantsTests.cs  Platform.Data.Tests.csproj
Sequences/: ISequenceAppender.cs  ISequenceWalker.cs  ISequences.cs  SequenceWalker.cs  StopableSequenceWalker.cs
Universal/: IUniLinks.cs  IUniLinksCRUD.cs  IUniLinksGS.cs  IUniLinksIO.cs  IUniLinksIOWithExtensions.cs  IUniLinksRW.cs
api/: Platform.Data.Constants.ILinksAddressConstants-1.html  Platform.Data.Constants.ILinksCombinedConstants-4.html  Platform.Data.Constants.ILinksDecisionConstants-1.html  (+43 more)
cpp/: CMakeLists.txt  conanfile.txt  install-local-conan-dependencies.sh
cpp/Platform.Data/: Hybrid.h  ILinks.h  ILinksExtensions.h  ISynchronizedLinks.h  LinkAddress.h  LinksConstants.h  LinksConstantsBase.h  LinksConstantsExtensions.h  LinksOptions.h  Platform.Data.TemplateLibrary.nuspec  Platform.Data.h  Point.h  WriteHandlerState.h
cpp/Platform.Data.Tests/: AllTests.cpp  HybridTests.cpp  ILinksTests.cpp  LinksConstantsTests.cpp  PointTests.cpp
cpp/Platform.Data/Exceptions/: ArgumentLinkDoesNotExistsException.h  ArgumentLinkHasDependenciesException.h  LinkWithSameValueAlreadyExistsException.h  LinksLimitReachedException.h  LinksLimitReachedExceptionBase.h
cpp/Platform.Data/Numbers/Raw/: AddressToRawNumberConverter.h  RawNumberToAddressConverter.h
cpp/Platform.Data/Sequences/: ISequenceAppender.h  ISequenceWalker.h  SequenceWalker.h  StopableSequenceWalker.h
cpp/Platform.Data/Universal/: IUniLinks.h  IUniLinksCRUD.h  IUniLinksGS.h  IUniLinksIO.h  IUniLinksIOWithExtensions.h  IUniLinksRW.h
(+86 files in other folders)
